[package]
name = "bucket_vec"
version = "0.2.0"
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"
repository = "https://github.com/Robbepop/bucket_vec"
documentation = "https://docs.rs/bucket_vec"
license = "MIT OR Apache-2.0"
keywords = ["bucket", "vec", "pin"]
description = """
An efficient vector-like data structure that consists of fixed-capacity buckets
in order to store elements without moving them arround as a replacement for
situations where the naive go-to solution would be using a collection of boxes,
e.g. Vec<Box<T>>.
"""
categories = ["data-structures"]

[dependencies]
# Required because `no_std` Rust does not support required math operations.
libm = { version = "0.2", default-features = false }

[dev-dependencies]
paste = "0.1.6"
criterion = "0.3.1"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
std = []
nightly = [
    "criterion/real_blackbox",
]
